#16160, Committed for fix table header alignment issue

--- a/src/app/components/citizen/tax/property/transfer-property/Components/property-owner/property-owner.component.scss
+++ b/src/app/components/citizen/tax/property/transfer-property/Components/property-owner/property-owner.component.scss
@@ -4,7 +4,3 @@
 .table-width{
     width: 100%
 }
-
-.property-owner-table th.mat-header-cell:first-of-type, .property-owner-table td.mat-cell:first-of-type{
-    padding-left: 24px !important;
-}
